# src/routes/admin.routes.js
@@ -2,6 +2,7 @@ const express = require('express')
 const { handleRegister, handleLogin, handleAdminDetailEdit, handleLogout, handleFullDetailOfAdmin } = require('../controller/admin.controller')
 const { validateRegister, validateLogin } = require('../validater/admin.validater')
 const { checkAuth } = require('../middleware/auth.middleware')
+const { handleGetChatAdminLatest } = require('../controller/chat.controller')
 
 const adminRouter = express.Router()
 
@@ -13,6 +14,9 @@ adminRouter.route('/login')
 
 adminRouter.route('/detailAdmin')
 .get(checkAuth, handleFullDetailOfAdmin)
+
+adminRouter.route('/getLatestChat')
+.get(checkAuth,handleGetChatAdminLatest)
 
 adminRouter.route('/logout')
 .post(checkAuth,handleLogout)
